data: readability.css: Fix a bit to please jigsaw.w3.org/css-validator

--- a/data/readability.css
+++ b/data/readability.css
@@ -1,4 +1,4 @@
-@charset utf-8;
+@charset "utf-8";
 
 /* Document */
 body
@@ -74,7 +74,6 @@ body
 	clear:both;
 	display:block;
 	font-size:.85em;
-	filter:alpha(opacity=20);
 	opacity:.20;
 	text-align:center;
 }
